--- a/projects/templates/projects/form_post_project.html
+++ b/projects/templates/projects/form_post_project.html
@@ -1,30 +1,49 @@
-{% extends 'base.html' %} 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+</head>
+<body>
+    <p>Barra de navegação</p>
+    <div class="form-post-project">
+        <h3>Adicionar Novo Projeto</h3>
+        <form action="" method="post">
+            <label for="name-project"> Nome
+                <input type="text" name="name-project" id="name-project">
+            </label>
+            <label for="description-project"> Descrição
+                <textarea name="description-project" id="description-project" cols="30" rows="10"></textarea>
+            </label>
+            <label for="date-start"> Data de início
+                <input type="date" name="date-start" id="date-start">
+            </label>
+            <label for="date-end"> Data de término
+                <input type="date" name="date-end" id="date-end">
+            </label>
+            <label for="situation"> Situação
+                <select name="situation" id="situation">
+                    <option value="1">Pendente</option>
+                    <option value="2">Em andamento</option>
+                    <option value="3">Interrompido</option>
+                    <option value="4">Finalizado</option>
+                </select>
+            </label>
+        </form>
+    </div>
+        
 
-{% block content %}
 
-<div class="form-post-project">
-    <h3>Adicionar Novo Projeto</h3>
-    <form action="" method="post">
-        <label for="name-project">
-            <input type="text" name="name-project" id="name-project">
-        </label>
-        <label for="description-project">
-            <textarea name="description-project" id="description-project" cols="30" rows="10"></textarea>
-        </label>
-        <label for="date-start">
-            <input type="date" name="date-start" id="date-start">
-        </label>
-        <label for="date-end">
-            <input type="date" name="date-end" id="date-end">
-        </label>
-        <label for="situation">
-            <select name="situation" id="situation">
-                <option value="1">Pendente</option>
-                <option value="2">Em andamento</option>
-                <option value="3">Interrompido</option>
-                <option value="4">Finalizado</option>
-            </select>
-        </label>
-    </form>
-</div>
-{% endblock %}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+</body>
+</html>
+
+
+
+
+
+
