adicionando botão de filtrar projetos #27

--- a/projects/templates/projects/home.html
+++ b/projects/templates/projects/home.html
@@ -8,6 +8,7 @@
     <h1> Projetos </h1>
 
     <a href="registrar" target="_blank" rel="noopener noreferrer">Adicionar</a>
+    <a href="filtrar" target="_blank" rel="noopener noreferrer" onclick="">Filtrar</a>
 </div>
 
 
