criando a função teste de filtrar projetos e chamando #27

--- a/projects/templates/projects/home.html
+++ b/projects/templates/projects/home.html
@@ -8,7 +8,7 @@
     <h1> Projetos </h1>
 
     <a href="registrar" target="_blank" rel="noopener noreferrer">Adicionar</a>
-    <a href="filtrar" target="_blank" rel="noopener noreferrer" onclick="">Filtrar</a>
+    <button id="filtrar_projeto" name="filtrar_projeto" onclick="filterProjects()">Filtrar</button>
 </div>
 
 
