condificando o botão de filtrar projetos #27

--- a/projects/static/css/styles.css
+++ b/projects/static/css/styles.css
@@ -9,14 +9,14 @@
     padding: 10px !important;
 }
 
-.home-project {
+.home_project {
     padding: 10px;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.home-project a {
+.home_project a {
     text-decoration: none;
     background-color: #42ACF0;
     padding: 10px;
@@ -24,7 +24,43 @@
     width: fit-content;
 }
 
-.home-project a:hover {
+.home_project a:hover {
     color: whitesmoke;
 
+}
+
+.filter_project_button {
+    padding: 10px;
+    color: whitesmoke;
+    width: fit-content;
+    background-color: violet;
+    border: none;
+}
+
+.filter_project_form {
+    display: none;
+}
+
+.filter_project_input {
+    width: 80%;
+    border: none;
+    border-bottom: 1px solid #42ACF0;
+    outline: none;
+    padding-bottom: 5px;
+    background-color: transparent;
+    animation-name: filter_project_input;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes filter_project_input {
+    from {
+        margin-top: 0px;
+        opacity: 0;
+    } 
+
+    to {
+        margin-top: 10px;
+        opacity: 1;
+    }
 }
