--- a/projects/static/css/styles.css
+++ b/projects/static/css/styles.css
@@ -29,12 +29,9 @@
 
 }
 
-.filter_project_button {
-    padding: 10px;
-    color: whitesmoke;
-    width: fit-content;
-    background-color: violet;
-    border: none;
+.group_buttons {
+    display: flex;
+    gap: 10px;
 }
 
 .filter_project_form {
