--- a/projects/static/css/styles.css
+++ b/projects/static/css/styles.css
@@ -61,3 +61,25 @@
         opacity: 1;
     }
 }
+
+.list_all_projects {
+    padding: 20px;
+}
+
+.list_button_group {
+    display: flex;
+    width: 100%;
+    align-items: right;
+    justify-content: right;
+}
+
+.list_button_group button {
+    border: none;
+    background-color: transparent;
+    margin-bottom: 10px;
+
+}
+
+.icon {
+    color: red !important;
+}
