--- a/projects/templates/projects/list_all_projects.html
+++ b/projects/templates/projects/list_all_projects.html
@@ -4,12 +4,36 @@
 
 {% block content %}
 
-    <ul>
-        {% for project in projects %} 
-            
-                {{ project.nome }}
-            </li>
-        {% endfor %}
-    </ul>
+<div class="list_all_projects">
+    <div class="list_button_group">
+        <button><i class="fa-solid fa-trash fa-lg icon"></i></button>
+    </div>
+    <table class="table project_list_table">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Código</th>
+                <th scope="col">Nome</th>
+                <th scope="col">Situação</th>
+                <th scope="col">Data de Início</th>
+                <th scope="col">Data de Finalização</th>
+            </tr>
+        </thead>
+        <tbody class="table-group-divider">
+            {% for project in projects %} 
+        
+            <tr>
+                <th><input type="checkbox" name="" id={{project.id}}></th>
+                <th scope="row">{{project.id}}</th>
+                <td>{{project.nome}}</td>
+                <td>{{project.situacao}}</td>
+                <td>{{project.data_inicio}}</td>
+                <td>{{project.data_termino}}</td>
+            </tr>
+
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 
 {% endblock %}
