--- a/projects/templates/projects/list_all_projects.html
+++ b/projects/templates/projects/list_all_projects.html
@@ -6,7 +6,11 @@
 
 <div class="list_all_projects">
     <div class="list_button_group">
-        <button><i class="fa-solid fa-trash fa-lg icon"></i></button>
+        <button id="delete_project_button" disabled="true">
+            <i id="trash_icon" class="fa-solid fa-trash fa-lg icon_trash"></i>
+        </button>
+        <button><i class="fa-solid fa-edit fa-lg icon_edit"></i></button>
+
     </div>
     <table class="table project_list_table">
         <thead>
@@ -23,7 +27,7 @@
             {% for project in projects %} 
         
             <tr>
-                <th><input type="checkbox" name="" id={{project.id}}></th>
+                <th><input type="checkbox" name="codigo" value={{project.id}} id={{project.id}} onchange="check_checkboxes()"></th>
                 <th scope="row">{{project.id}}</th>
                 <td>{{project.nome}}</td>
                 <td>{{project.situacao}}</td>
