Implementando a função deletar projeto no lado cliente #38

--- a/projects/templates/projects/list_all_projects.html
+++ b/projects/templates/projects/list_all_projects.html
@@ -6,9 +6,10 @@
 
 <div class="list_all_projects">
     <div class="list_button_group">
-        <button id="delete_project_button" disabled="true">
+        <button id="delete_project_button" disabled="true" type="submit" onclick="delete_project()"> 
             <i id="trash_icon" class="fa-solid fa-trash fa-lg icon_trash"></i>
         </button>
+
         <button><i class="fa-solid fa-edit fa-lg icon_edit"></i></button>
 
     </div>
