--- a/projects/templates/projects/list_all_projects.html
+++ b/projects/templates/projects/list_all_projects.html
@@ -10,7 +10,9 @@
             <i id="trash_icon" class="fa-solid fa-trash fa-lg icon_trash"></i>
         </button>
 
-        <button><i class="fa-solid fa-edit fa-lg icon_edit"></i></button>
+        <button id="edit_project_button" disabled="true" type="submit" onclick="edit_project()">
+            <i id="edit_icon" class="fa-solid fa-edit fa-lg icon_edit"></i>
+        </button>
 
     </div>
     <table class="table project_list_table">
