Implementando a função buscar por nome #38

--- a/projects/templates/projects/home.html
+++ b/projects/templates/projects/home.html
@@ -33,13 +33,44 @@
         </a>
     </div>
 
-    <form class="filter_project_form" id="filter_project_form">  
+    <form class="filter_project_form" id="filter_project_form" method="GET">  
         <input 
+            id="filter_project_input"
             class="filter_project_input"
-            type="text" 
-            name="input_filtrar_projeto" 
-            placeholder="Nome do projeto">
+            type="search" 
+            name="nome" 
+            placeholder="Nome do projeto"
+        >
+
     </form>
+    {% if projects %}
+        <table class="table search_results_table" id="search_results_table">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Código</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Situação</th>
+                    <th scope="col">Data de Início</th>
+                    <th scope="col">Data de Finalização</th>
+                </tr>
+            </thead>
+            <tbody class="table-group-divider">
+                {% for project in projects %} 
+            
+                <tr>
+                    <th><input type="checkbox" name="codigo" value={{project.id}} id={{project.id}} onchange="check_checkboxes()"></th>
+                    <th scope="row">{{project.id}}</th>
+                    <td>{{project.nome}}</td>
+                    <td>{{project.situacao}}</td>
+                    <td>{{project.data_inicio}}</td>
+                    <td>{{project.data_termino}}</td>
+                </tr>
+
+                {% endfor %}
+            </tbody>
+        </table>
+    {% endif %}
 </div>
 
 
