--- a/projects/static/css/styles.css
+++ b/projects/static/css/styles.css
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    background-color: rgb(252, 244, 244);
 }
 
 .home_project a {
@@ -39,6 +40,7 @@
 .filter_project_form {
     display: none;
 }
+
 
 .filter_project_input {
     width: 80%;
@@ -66,7 +68,7 @@
 
 /*  Template de listagem dos projetos */
 
-.list_all_projects {
+.list_all_projects{
     padding: 20px;
 }
 
@@ -96,7 +98,8 @@
 .project_add_form {
     padding: 20px;
     display: flex;
-    flex-direction: column
+    flex-direction: column;
+    gap: 10px;
 }
 
 .project_add_form p {
@@ -108,11 +111,9 @@
 .project_add_form p input, textarea, select {
     border: 1px solid #42ACF0;
     outline: none;
-    text-indent: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-right: 5px;
+    padding: 5px;
 }
+
 
 .project_add_form p input[type='date'], 
 .project_add_form p select {
@@ -131,3 +132,4 @@
     color: #fff;
     cursor: pointer;
 }
+
