--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -27,6 +27,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/projetos">Projetos</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/artefatos">Artefatos</a>
+            </li>
           </ul>
         </div>
     </nav>
