--- a/flows/templates/flows/fluxo/adicionar.html
+++ b/flows/templates/flows/fluxo/adicionar.html
@@ -3,7 +3,7 @@
 {% block title %}Adicionar fluxo{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container mx-auto">
   <div class="row g-2">
     <div class="col-12">
       <h2>Adicionar fluxo</h2>
