Corrige link de detalhamento de fluxo #63

--- a/flows/templates/flows/fluxo/home.html
+++ b/flows/templates/flows/fluxo/home.html
@@ -22,7 +22,7 @@
               <p class="card-text mb-1">{{ fluxo.descricao }}</div>
             <div class="card-footer d-flex justify-content-between align-items-center">
               <small>{{ fluxo.etapa_set.count }} etapas</small>
-              <a href="#" class="btn btn-sm btn-primary ml-auto">Ver detalhes</a>  
+              <a href="{% url 'flows:detalhes' fluxo.id %}" class="btn btn-sm btn-primary ml-auto">Ver detalhes</a>  
             </div>
           </div>
         </div>
