Atualiza link para criação de etapa #63

--- a/flows/templates/flows/fluxo/detalhes.html
+++ b/flows/templates/flows/fluxo/detalhes.html
@@ -12,7 +12,7 @@
     <div class="col-12">
       <div class="d-flex justify-content-between align-items-center">
         <h4>Etapas</h4>
-        <a href="#" class="btn btn-primary">Adicionar etapa</a>
+        <a href="{% url 'flows:adicionar_etapa' fluxo_pk=fluxo.id %}" class="btn btn-primary">Adicionar etapa</a>
       </div>
       <div class="row g-2">
         {% for etapa in fluxo.etapa_set.all %}
