--- a/flows/templates/flows/fluxo/home.html
+++ b/flows/templates/flows/fluxo/home.html
@@ -9,7 +9,7 @@
     <div class="col-12">
       <div class="d-flex justify-content-between align-items-center">
         <h2>Seus fluxos</h2>
-        <a href="{% url 'flows:adicionar' %}" class="btn btn-primary">Adicionar fluxo</a>
+        <a href="{% url 'flows:adicionar_fluxo' %}" class="btn btn-primary">Adicionar fluxo</a>
       </div>
     </div>
     <div class="col-12">
@@ -22,7 +22,7 @@
               <p class="card-text mb-1">{{ fluxo.descricao }}</div>
             <div class="card-footer d-flex justify-content-between align-items-center">
               <small>{{ fluxo.etapa_set.count }} etapas</small>
-              <a href="{% url 'flows:detalhes' fluxo.id %}" class="btn btn-sm btn-primary ml-auto">Ver detalhes</a>  
+              <a href="{% url 'flows:detalhes_fluxo' fluxo.id %}" class="btn btn-sm btn-primary ml-auto">Ver detalhes</a>  
             </div>
           </div>
         </div>
