Adiciona link de remoção de etapa #63

--- a/flows/templates/flows/fluxo/detalhes.html
+++ b/flows/templates/flows/fluxo/detalhes.html
@@ -33,6 +33,7 @@
             </div>
             <div class="card-footer">
               <a href="{% url 'flows:editar_etapa' fluxo_pk=fluxo.id pk=etapa.id %}" class="btn btn-primary">Editar</a>
+              <a href="{% url 'flows:excluir_etapa' fluxo_pk=fluxo.id pk=etapa.id %}" class="btn btn-danger">Excluir</a>
             </div>
           </div>
         </div>
