--- a/flows/templates/flows/fluxo/adicionar.html
+++ b/flows/templates/flows/fluxo/adicionar.html
@@ -7,14 +7,10 @@
   <div class="row g-2">
     <div class="col-12">
       <h2>Adicionar fluxo</h2>
+      {% include 'form_errors.html' %}
       <form method="post">
         {% csrf_token %}
-        {% for field in form %}
-        <div class="form-group">
-          <label for="id_{{ field.html_name }}">{{ field.label }}</label>
-          {{field}}
-        </div>
-        {% endfor %}
+        {% include 'form_render.html' %}
         <button type="submit" class="btn btn-primary mt-2">Salvar</button>
       </form>
     </div>
